tests/Tuc/Fixtures/errors/EventReadWithoutACaller.tuc
tuc parse error test
participants
    [InputStream] parts

[InputStream] -> InputEvent
